--- a/CSS/index.html
+++ b/CSS/index.html
@@ -23,18 +23,7 @@
 
     <section>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus
-        deserunt velit nemo vero dolores provident iure ad, ipsam nesciunt,
-        facilis sunt quod voluptatum odit excepturi temporibus fuga! Expedita ut
-        qui dolorem ad quidem asperiores quo voluptate, eveniet necessitatibus
-        neque! Eligendi, id, dolores culpa temporibus veritatis molestiae
-        voluptatibus provident similique aliquam iste tempore dolor vero nihil
-        velit enim atque ratione saepe consectetur optio perferendis quas? Enim
-        nobis atque eum possimus, assumenda exercitationem nulla maiores ab?
-        Ullam voluptatem dolor at necessitatibus expedita recusandae, vero
-        nostrum explicabo sed cupiditate quidem ratione debitis animi rem culpa
-        velit! Modi dignissimos velit atque amet quibusdam.
-      </p>
-    </section>
+        <p>ayesha</p>
+        
   </body>
 </html>
