--- a/CSS/CSS 02/index.html
+++ b/CSS/CSS 02/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quae rem
+      inventore voluptas veritatis cupiditate, aperiam nemo assumenda tempore
+      deserunt ratione at quo architecto doloribus nisi similique, impedit
+      recusandae eum!
+    </p>
+
+    <h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae!
+    </h1> -->
+
     <!-- <div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
@@ -17,9 +28,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
         deserunt.
       </span>
-    </div>
+    </div> -->
 
-    <section>
+    <!-- <section>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
         repudiandae necessitatibus ratione. Ab quaerat quod dignissimos
@@ -34,9 +45,37 @@
         nostrum explicabo rem rerum quod omnis sed accusamus eos. Vel reiciendis
         dolorem voluptate rem ipsum cumque esse.
       </p>
-    </section> -->
+    </section>
+
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius qui quas
+        nam, dolore reprehenderit quod fugit laboriosam enim, sequi cumque
+        mollitia! A maiores laudantium adipisci soluta veritatis voluptatibus ex
+        numquam, aperiam fugiat commodi ad unde sit sapiente optio quos ullam
+        quaerat minima veniam impedit tenetur quia suscipit doloremque cumque.
+        Assumenda alias praesentium quisquam vel voluptas. Velit fugiat qui
+        doloremque ipsum, vitae nisi enim? Harum ut ipsa reiciendis doloremque
+        asperiores? Expedita blanditiis necessitatibus earum facilis saepe!
+        Excepturi dignissimos cupiditate perspiciatis recusandae explicabo.
+        Soluta, sint, quas vel voluptas minus quidem sit tempore aperiam sunt
+        cum earum aut laborum unde, sed ipsum modi.
+      </p>
+    </div> -->
 
     <!-- <h1>Web development</h1> -->
+
+    <div id="div01">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid,
+        consequuntur?
+      </p>
+      <p class="para02">Lorem, ipsum dolor.</p>
+    </div>
+
+    <!-- <div id="div02">
+      <p>Lorem ipsum dolor sit.</p>
+    </div> -->
 
     <!-- <div class="div01">
       <div class="inside-div">
@@ -61,6 +100,6 @@
 
     <!-- <p class="main">Hello</p> -->
 
-    <p class="msg warning para" id="hello">Hello</p>
+    <!-- <p class="msg warning para" id="hello">Hello</p> -->
   </body>
 </html>
